# WhatsSynergy

./: DESIGN_UNIFIED.md  IMPLEMENTATION_ROADMAP.md
.cursor/rules/: agno-roles.mdc  orders.mdc
whatsapi-python/: .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  py.typed  pyproject.toml  setup.py
whatsapi-python/whatsapi/: __init__.py
whatsapi-python/whatsapi/models/: __init__.py  message.py
whatsapi-python/whatsapi/providers/: __init__.py  base.py  evolution.py
whatsapi-python/whatsapi/webhook/: __init__.py  handler.py
